# twilio-voice-bridge

./: .dev.env.example  .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.dev.yaml  compose.yaml  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: ci.yaml  release.yaml
config/: config.yaml
src/: bridge.py  config.py  provider.py  server.py
src/providers/: __init__.py  openai_realtime.py
